Fixed alignment of statistics headers

--- a/Docary/Docary/Content/screen.desktop.css
+++ b/Docary/Docary/Content/screen.desktop.css
@@ -168,7 +168,7 @@ strong {
    width: 1200px;        
 }
 
-.timeline-header {
+.header-base {
     font-weight: bold;
     color: #000;    
     text-align: right;
@@ -176,7 +176,15 @@ strong {
     display:inline;  
     padding-right: 7px;
     margin-right: 2px;
+    word-wrap: break-word;
+}
+
+.timeline-header {  
     width: 75px;  
+}
+
+.statistics-line-header {    
+   width: 100px;
 }
 
 .timelineblock {   
